objects/Question_Response__c/fields/Assigned_Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Interviewer__c</fullName>
    <label>Assigned Interviewer</label>
    <referenceTo>Assigned_Interviewer__c</referenceTo>
    <relationshipLabel>Question Responses</relationshipLabel>
    <relationshipName>Question_Responses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>