objects/Question_Response__c/fields/Response_Notes__c.field-meta.xml
<CustomField>
    <fullName>Response_Notes__c</fullName>
    <label>Response Notes</label>
    <type>TextArea</type>
</CustomField>